# tensa

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs
benches/: benchmarks.rs
docker/: Dockerfile  README.md  build.ps1  build.sh  docker-compose.yml
docker-bundle/: README.md  docker-compose.yml
documentation/: TENSA_REFERENCE.md  fuzzy_capabilities_report.md
documentation/archive-template/: README.md  manifest.json
license/: CLA.md  COMMERCIAL-LICENSE-TERMS.md  CONTRIBUTING.md  DUAL-LICENSING.md  LICENSE  NOTICE  README-LICENSING-snippet.md  README.md  finalize-license.sh
scripts/: tensa.ps1  tensa.sh
skills/: studio-ui.md  tensa-fuzzy.md  tensa-graded.md  tensa-opinion-dynamics.md  tensa-reconstruction.md  tensa-synth.md  tensa-writer.md  tensa.md
src/: error.rs  lib.rs  main.rs  source.rs  text_util.rs  types.rs
src/adversarial/: calibration.rs  cognitive_hierarchy.rs  counter_gen.rs  counter_score.rs  disarm.rs  governance.rs  mod.rs  opinion_shift_reward.rs  optimizer.rs  policy_gen.rs  retrodiction.rs  reward_model.rs  session.rs  sim_state.rs  stix_export.rs  suqr.rs  types.rs  wargame.rs  wargame_substrate_tests.rs
src/analysis/: ach.rs  alerts.rs  anomaly.rs  argumentation.rs  argumentation_gradual.rs  argumentation_gradual_tests.rs  argumentation_tests.rs  beliefs.rs  beliefs_tests.rs  centrality.rs  centrality_tests.rs  cib.rs  community.rs  community_detect.rs  contagion.rs  contagion_bistability.rs  contagion_bistability_tests.rs  contagion_tests.rs  embeddings.rs  entropy.rs  entropy_tests.rs  evidence.rs  evidence_tests.rs  evolution.rs  graph_centrality.rs  graph_centrality_tests.rs  graph_projection.rs  higher_order_contagion.rs  investigation.rs  link_prediction.rs  mod.rs  narrative_centrality.rs  narrative_centrality_tests.rs  pan_loader.rs  pan_verification.rs  pan_verification_tests.rs  pathfinding.rs  pathfinding_tests.rs  psl.rs  similarity.rs  (+12 more)
src/analysis_status/: mod.rs
src/api/: adaptation_routes.rs  analysis_status_routes.rs  analytics_readback_routes.rs  annotation_routes.rs  archetype_routes.rs  architecture_routes.rs  argumentation_gradual.rs  bulk_routes.rs  chunk_routes.rs  cib_routes.rs  claims_routes.rs  collection_routes.rs  compile_routes.rs  continuity_routes.rs  cost_ledger_routes.rs  debug_routes.rs  disinfo_routes.rs  editing_routes.rs  fuzzy_tests.rs  generation_routes.rs  image_routes.rs  import_routes.rs  mod.rs  monitor_routes.rs  multilingual_routes.rs  openai_compat.rs  openapi.rs  plan_routes.rs  project_routes.rs  research_routes.rs  revision_routes.rs  routes.rs  scheduler_routes.rs  server.rs  settings_routes.rs  source_routes.rs  spread_routes.rs  storywriting_routes.rs  style_routes.rs  synth_tests.rs  (+5 more)
src/claims/: detection.rs  fact_check.rs  matching.rs  mod.rs  mutation.rs  sync.rs  types.rs
src/disinfo/: archetype_engine.rs  archetypes.rs  claims_engine.rs  comparison.rs  engines.rs  fingerprints.rs  fusion.rs  mod.rs  monitor.rs  multilingual.rs  orchestrator.rs
src/export/: archive.rs  archive_types.rs  compile.rs  csv_export.rs  disinfo_report.rs  graphml.rs  maltego.rs  manuscript.rs  misp.rs  mod.rs  report.rs  situation_report.rs  stix.rs
src/fuzzy/: aggregation.rs  aggregation_choquet.rs  aggregation_learn.rs  aggregation_learn_tests.rs  aggregation_measure.rs  aggregation_owa.rs  aggregation_tests.rs  allen.rs  allen_store.rs  allen_tests.rs  backward_compat_tests.rs  fca.rs  fca_store.rs  fca_tests.rs  hashing.rs  hybrid.rs  hybrid_tests.rs  mod.rs  quantifier.rs  quantifier_tests.rs  registry.rs  rules.rs  rules_eval.rs  rules_integration_tests.rs  rules_store.rs  rules_tests.rs  rules_types.rs  syllogism.rs  syllogism_tests.rs  synthetic_cib_dataset.rs  tnorm.rs  tnorm_tests.rs
src/generation/: engine.rs  job_engine.rs  materializer.rs  mod.rs  planner.rs  prompt_builder.rs  types.rs
src/hypergraph/: bitemporal.rs  causal.rs  chunk.rs  entity.rs  entity_tests.rs  maturity.rs  mod.rs  participation.rs  participation_tests.rs  situation.rs  source.rs  source_tests.rs  state.rs
src/images/: mod.rs  openrouter.rs  provider.rs  storage.rs  types.rs
src/inference/: causal.rs  cost.rs  dispatch.rs  enrichment.rs  explain.rs  game.rs  hawkes.rs  jobs.rs  mean_field_game.rs  mod.rs  motivation.rs  netinf.rs  simulation.rs  temporal_ilp.rs  trajectory.rs  types.rs  worker.rs
src/ingestion/: archive.rs  bedrock.rs  chunker.rs  config.rs  deletion.rs  discovery.rs  doc_status.rs  docparse.rs  embed.rs  extraction.rs  gate.rs  gemini.rs  geocode.rs  jobs.rs  llm.rs  llm_cache.rs  mod.rs  nlp_extract.rs  onnx_embedder.rs  pipeline.rs  prompt_tuning.rs  queue.rs  resolve.rs  span_resolve.rs  stix.rs  structured.rs  vector.rs  vector_store.rs  web.rs
src/mcp/: backend.rs  embedded.rs  embedded_ext.rs  embedded_fuzzy.rs  embedded_fuzzy_ext.rs  embedded_fuzzy_tests.rs  embedded_graded.rs  embedded_graded_tests.rs  embedded_synth.rs  embedded_w15.rs  error.rs  http.rs  mod.rs  server.rs  types.rs
src/narrative/: arc.rs  backfill.rs  causal_helpers.rs  character_arcs.rs  commitments.rs  compression.rs  continuity.rs  corpus.rs  cost_ledger.rs  debug.rs  debug_fixes.rs  dedup.rs  diff.rs  dramatic_irony.rs  (+27 more)
tests/: benchmark_suite.rs  chronosense_eval.rs  disinfo_sprint_d1.rs  disinfo_sprint_d2.rs  disinfo_sprint_d3.rs  e2e_crud.rs  er_benchmark.rs  fuzzy_capabilities_demo.rs  integration.rs  integration_ingestion.rs  nightfall_eval.rs  pan_benchmark.rs  rag_eval.rs  tensa_bench_multihop.rs  tensa_bench_narrative.rs  tensa_bench_tkg.rs
(+204 files in other folders)
