[package]
name = "tensa"
version = "0.79.2"
edition = "2021"
description = "Narrative Tensor: multi-fidelity temporal hypergraph engine for multi-actor event systems"
license = "MIT"
repository = "https://github.com/advancedtech-sk/tensa"

[lib]
name = "tensa"
path = "src/lib.rs"

[[bin]]
name = "tensa-server"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "tensa-mcp"
path = "src/bin/tensa_mcp.rs"
required-features = ["mcp"]

[[bin]]
name = "tensa-cli"
path = "src/bin/tensa_cli.rs"
required-features = ["cli"]

[[bin]]
name = "train_pan_weights"
path = "src/bin/train_pan_weights.rs"
required-features = ["cli"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# IDs
uuid = { version = "1", features = ["v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# KV Store
rocksdb = { version = "0.22", optional = true }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP server (Phase 0 Sprint 5)
axum = { version = "0.7", optional = true, features = ["ws"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# Studio chat SSE streaming (v0.60 — bridges tokio mpsc → axum Sse Stream)
tokio-stream = { version = "0.1", optional = true }

# Query parser
pest = "2"
pest_derive = "2"

# HTTP client (Claude API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Regex (chunking, entity resolution)
regex = "1"

# String similarity (entity resolution — fuzzy matching)
strsim = "0.11"

# Embedding (Phase 1 — feature-gated behind "embedding")
ort = { version = "2.0.0-rc.12", optional = true, features = ["ndarray"] }
ndarray = { version = "0.17", optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }

# Linear algebra (Phase 2 inference — NOTEARS)
nalgebra = { version = "0.33", optional = true }

# .env file loading
dotenvy = "0.15"

# Spatial index
rstar = "0.12"

# MCP server (feature-gated)
rmcp = { version = "1", features = ["server", "transport-io"], optional = true }
schemars = { version = "1.0", optional = true }

# Ordered collections
ordered-float = "4"

# CSV parsing (Sprint P3.6 — structured import)
csv = "1"

# Document parsing (Sprint P3.6 — feature-gated)
lopdf = { version = "0.34", optional = true }
docx-rs = { version = "0.4", optional = true }

# CLI (Sprint P3.8 — feature-gated)
clap = { version = "4", features = ["derive"], optional = true }

# Chunk hashing (Sprint P3.9 — incremental re-ingestion)
sha2 = "0.10"

# Bootstrap / deterministic RNG (v0.28 — stylometry statistics)
rand = "0.8"
rand_chacha = "0.3"

# Archive export/import (ZIP container)
zip = "2"

# Base64 encoding (archive MCP tools)
base64 = "0.22"

# HMAC for AWS SigV4 signing (Bedrock, Sprint RAG-6)
hmac = { version = "0.12", optional = true }

# Web/RSS ingestion (Sprint P3.9 — feature-gated)
scraper = { version = "0.20", optional = true }
feed-rs = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
# Cross-platform RSS sampling for the synthetic-scaling benchmark (EATH Phase 8).
# memory-stats is the only cross-platform option that works on both Windows (dev
# platform) and Linux CI without pulling in a custom allocator; jemalloc-ctl
# would only populate on Linux, making benchmark reports non-comparable.
memory-stats = "1.2"

[features]
default = ["rocksdb", "disinfo"]
server = ["axum", "tower", "tower-http"]
inference = ["nalgebra"]
mcp = ["rmcp", "schemars", "generation"]
docparse = ["lopdf", "docx-rs"]
embedding = ["ort", "ndarray", "tokenizers"]
cli = ["clap", "reqwest/blocking"]
web-ingest = ["scraper", "feed-rs"]
gemini = []
bedrock = ["hmac"]
# Disinfo extension (Sprint D1+): dual fingerprints, CIB, claims, archetypes, MCP-client orchestrator.
# Lightweight (no new deps in D1); kept behind a flag so the literary build can opt out cleanly.
disinfo = []
# Narrative generation engine (Sprint D9): commitments, fabula/sjužet, dramatic irony,
# character arcs, subplots, scene-sequel, style embeddings, plan generator, generation engine.
generation = []
# Adversarial narrative wargaming (Sprint D12): SUQR bounded rationality, policy generation,
# simulation state, wargame loop, DISARM TTPs, counter-narrative generation, retrodiction.
adversarial = ["disinfo"]
# Studio integrated agent chat (v0.60+): /studio/chat SSE endpoint, session storage,
# agent harness, tool calling, confirmation gate, third-party MCP proxy.
# v0.63 (Phase 4) pulls rmcp/client + transport-child-process for spawning
# user-configured MCP servers over stdio.
studio-chat = ["server", "tokio-stream", "rmcp", "rmcp/client", "rmcp/transport-child-process"]

[[bench]]
name = "benchmarks"
harness = false

[profile.dev]
# The dev build now exceeds MSVC's PDB size limit (LNK1140) because of how much
# code ort/tokenizers/rocksdb/hyper/etc. pull in. Line-tables-only debug info
# keeps backtraces working while cutting the PDB to well under the limit.
debug = 1

[profile.release]
lto = true
codegen-units = 1
